- Billing: When duplicationg orders from one book to another, check if one of the two books is a purchase order book. When one of the 2 is a purchase order book then swap the unit_price with the unit_cost parameter for every order item.
- Billing: Added contextmenu to order grid that adds the functionality to change the order status of the selected orders.
- Calendar: When importing an ICS file with an appointment that has a recurrence pattern 'last X of month', an error message is given but the import continues.
- Documenttemplates - Fixed Exception that was throwed when no customfieldrecord could be found
- CalDAV will except slashed in imported events

06-11-2014 6.0.34
- Fixed broken email viewer in files module
- Fixed ODF generation in billing
- Trim leading backslashes in autoloader
- Script compression sent wrong headers which broke script loading in some rare cases
- Email: added new config property to the emailcomposer to disable the template button (config.disableTemplates)
- Tasks: Added pagination to the category select combobox
- Fixed AbstractController::getRoute() function with namespaces.
- Accept YYYYMMDD format when importing vCard with birthdays
- If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted 
- Added clarification for CalDAV tasklist sync to the settings->synchronization panel
- Calendar: fixed warning message for the event accept external page
- Site module: Fixed some namespace problems that broke the site treepanel
- Saving ProjectV2 TaskGrid will submit all grid data else the grouping functionality will break


28-10-2014 6.0.33
- Sorting users respects sort of name order
- Billing, added functionality for multiple payments per order. This update will also convert existing payed orders to the new method.
- Billing: Fixed display problem of costcode combos: Changed displaying "code" instead of "name" in the combo